--- a/Invert/Invert.csproj
+++ b/Invert/Invert.csproj
@@ -75,6 +75,9 @@
     <Compile Include="Equipment.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Invert_Cabinet.xaml.cs">
+      <DependentUpon>Invert_Cabinet.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Model1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -95,6 +98,10 @@
       <DependentUpon>Authoriazation.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Invert_Cabinet.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model1.Context.cs">
