--- a/Invert/Invert.csproj
+++ b/Invert/Invert.csproj
@@ -36,6 +36,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>depositphotos_79293474-stock-illustration-task-list-icon-from-commerce.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ControlzEx, Version=4.0.0.0, Culture=neutral, PublicKeyToken=69f1c32f803d307e, processorArchitecture=MSIL">
       <HintPath>..\packages\ControlzEx.4.3.0\lib\net462\ControlzEx.dll</HintPath>
@@ -164,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="db.edmx.sql" />
+    <Resource Include="depositphotos_79293474-stock-illustration-task-list-icon-from-commerce.ico" />
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Model1.Context.cs</LastGenOutput>
