--- a/Invert/packages.config
+++ b/Invert/packages.config
@@ -8,4 +8,5 @@
   <package id="MaterialDesignThemes" version="4.0.0" targetFramework="net472" />
   <package id="MaterialDesignThemes.MahApps" version="0.1.6" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
+  <package id="Tulpep.NotificationWindow" version="1.1.38" targetFramework="net472" />
 </packages>
